--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-pandas
-numpy
-matplotlib
-seaborn
-ipython
-colorama
-folium
-pillow
-babel
+pandas==2.2.3
+numpy==1.26.4
+matplotlib==3.10.0
+seaborn==0.13.2
+ipython==8.31.0
+colorama==0.4.6
+folium==0.19.2
+pillow==11.0.0
+streamlit==1.42.2
